--- a/element-search/popups/task.html
+++ b/element-search/popups/task.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="modal" id="modal_success">
+    <div class="modal modal_active" id="modal_success">
         <div class="modal__content">
             <div class="modal__close modal__close_times">&times;</div>
             <a href="#" class="btn btn_success">Хорошо сделано!</a>
